put style and script

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI-Powered Personal Journal</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="../frontend/styles/main.css">
 </head>
 <body>
     <div class="container">
@@ -13,6 +13,6 @@
         <button id="submit-entry">Submit</button>
         <div id="suggestions"></div>
     </div>
-    <script src="scripts/app.js"></script>
+    <script src="../frontend/scripts/app.js"></script>
 </body>
 </html>
