--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
 <body>
     <div class="container">
         <h1>Welcome to Your Personal Journal</h1>
-        <textarea id="journal-entry" placeholder="Write your thoughts here..."></textarea>
-        <button id="submit-entry">Submit</button>
-        <div id="suggestions"></div>
+        <form id="journal-form">
+            <textarea id="journal-input" placeholder="Write your thoughts here..."></textarea>
+            <button id="submit-entry" type="submit">Submit</button>
+        </form>
+        <div id="suggestions-container"></div>
     </div>
     <script src="scripts/app.js"></script>
 </body>
