--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Your Personal Journal</h1>
+        <h1>Welcome to Your AI-Powered Personal Journal</h1>
         <form id="journal-form">
             <textarea id="journal-input" placeholder="Write your thoughts here..."></textarea>
             <button id="submit-entry" type="submit">Submit</button>
