keep space for users entries

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
             <textarea id="journal-input" placeholder="Write your thoughts here..."></textarea>
             <button id="submit-entry" type="submit">Submit</button>
         </form>
+        <div id="latest-entry-container" class="latest-entry" style="display:none;">
+            <h2>Your Entry</h2>
+            <div id="latest-entry"></div>
+        </div>
         <div id="suggestions-container"></div>
     </div>
     <script src="scripts/app.js"></script>
