add next steps that chatgpt told me

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,16 @@
             <div id="latest-entry"></div>
         </div>
         <div id="suggestions-container"></div>
+        <div id="history-container"></div>
+        <select id="mood-select">
+            <option value="">Select mood</option>
+            <option value="happy">😊 Happy</option>
+            <option value="tired">😴 Tired</option>
+            <option value="stressed">😰 Stressed</option>
+            <option value="excited">🤩 Excited</option>
+        </select>
+        <button id="export-btn">Export Journal</button>
+        <div id="daily-prompt"></div>
     </div>
     <script src="scripts/app.js"></script>
 </body>
